--- a/Profit_per_mm.ipynb
+++ b/Profit_per_mm.ipynb
@@ -1928,7 +1928,13 @@
     "\n",
     "Our shelves contain products with a total profit of 19124.06 and maximum possible profit is around 21732.749.\n",
     "\n",
-    "There is around 16 mm of free space left.\n"
+    "\n",
+    "Selecting products according to profit per mm, proves to be better than sorting according to profit, here we obtained a total profit of 19124.06(much better than 19106.73).\n",
+    "\n",
+    "\n",
+    "There is around 16 mm of free space left.\n",
+    "\n",
+    "The remaining 16mm of space left can be covered by listing other products that have not been selected by our application.\n"
    ]
   }
  ],
