--- a/planogram_profit.ipynb
+++ b/planogram_profit.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read data from csv:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +76,7 @@
        "4         5            90.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,11 +91,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_width_mm</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p6863</td>\n",
+       "      <td>75</td>\n",
+       "      <td>223.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>p5649</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1183.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>p1592</td>\n",
+       "      <td>65</td>\n",
+       "      <td>214.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p6878</td>\n",
+       "      <td>46</td>\n",
+       "      <td>81.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>p7897</td>\n",
+       "      <td>40</td>\n",
+       "      <td>182.46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  product_id  product_width_mm   profit\n",
+       "0      p6863                75   223.53\n",
+       "1      p5649                51  1183.93\n",
+       "2      p1592                65   214.08\n",
+       "3      p6878                46    81.36\n",
+       "4      p7897                40   182.46"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products = pd.read_csv(\"products.csv\")\n",
+    "products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "products = pd.read_csv(\"products.csv\")\n",
     "products[\"profit_per_mm\"] = products[\"profit\"]/products[\"product_width_mm\"]\n",
     "products = products.sort_values(\"profit_per_mm\", ascending=False)"
    ]
@@ -1855,11 +1946,14 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "    Conclusions:\n",
+    "Conclusions:\n",
     "\n",
     "Our shelves contain products with a total profit of 19106.73 and maximum possible profit is around 21732.749.\n",
     "\n",
     "There is around 15mm of free space left.\n",
+    "\n",
+    "\n",
+    "The remaining 15mm of space left can be covered by listing other products that have not been selected by our application.\n",
     "\n"
    ]
   }
